examples/invalid/01_type_mismatch_char_to_int.moo
fun main() -> Int do
  let x: Int := 3
  x := 'a'


end-main


